# PluginLoader

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  plugins.cpp  plugins.h  utest.cpp
include/POCO/: ClassLibrary.h  ClassLoader.h  Exception.h  Foundation.h  Manifest.h  MetaObject.h  SharedLibrary.h  SharedLibrary_UNIX.h  SharedLibrary_WIN32.h  SharedMemory.h
include/plugin_loader/: console.h  exceptions.hpp  meta_object.hpp  multi_library_plugin_loader.hpp  platform.hpp  plugin_loader.hpp  plugin_loader_core.hpp  register_macro.hpp  shared_library.hpp  visibility_control.hpp
src/: console.cpp  meta_object.cpp  multi_library_plugin_loader.cpp  plugin_loader.cpp  plugin_loader_core.cpp  shared_library_UNIX.cpp
src/Poco/: Exception.cpp  Manifest.cpp  SharedLibrary.cpp  SharedLibrary_UNIX.cpp  SharedLibrary_WIN32.cpp
